# resume-uk

./: .gitignore  README.md  generate_pdf.py  index.html  pyproject.toml  requirements.txt  style.css  upload_pdf.py
.github/workflows/: resume-upload.yml
fonts/: IosevkaCurlySlab.css
