[tool.poetry]
name = "resume"
version = "0.1.0"
description = ""
authors = ["Thowbik Dustan <beejascaptain@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pdfkit = "^1.0.0"
wkhtmltopdf = "^0.2"
pyhtml2pdf = "^0.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
