[tool.poetry]
name = "resume"
version = "0.1.0"
description = ""
authors = ["Thowbik Dustan <beejascaptain@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pdfkit = "^1.0.0"
wkhtmltopdf = "^0.2"
pyhtml2pdf = "^0.0.7"
google-auth = "^2.32.0"
google-auth-oauthlib = "^1.2.1"
google-auth-httplib2 = "^0.2.0"
google-api-python-client = "^2.137.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
